--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -4,12 +4,14 @@
 
 <div class="container mt-3">
     <div class="row">
-        <div class="btn-group" name="predicate">
-            <button class="btn btn-primary" btnRadio="liked" 
-                [(ngModel)]="predicate" (click)="loadLikes()">Members I like</button>
-            <button class="btn btn-primary" btnRadio="likedBy" 
-                [(ngModel)]="predicate" (click)="loadLikes()">Members who like me</button>
-        </div>
+        <div class="col">
+            <div class="btn-group" name="predicate">
+                <button class="btn btn-primary" btnRadio="liked" 
+                    [(ngModel)]="predicate" (click)="loadLikes()">Members I like</button>
+                <button class="btn btn-primary" btnRadio="likedBy" 
+                    [(ngModel)]="predicate" (click)="loadLikes()">Members who like me</button>
+            </div>
+        </div>        
     </div>
 
     <div class="row mt-3">
